# tabfilereader

./: .buildinfo  .gitignore  CHANGES.rst  Makefile  README.rst  api.html  changes.html  genindex.html  guide.html  index.html  license.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  test.yml
_sources/: api.rst.txt  guide.rst.txt
docs/source/: conf.py  index.rst
src/tabfilereader/: __init__.py  errors.py  reader.py  record.py  schema.py  types.py  util.py
test/: __init__.py  test_errors.py  test_reader.py  test_record.py  test_schema.py  test_types.py
test/data/: all_types.csv  all_types.ods  all_types.xls  all_types.xlsx  bad_formula.ods  bad_formula.xls  bad_formula.xlsx  empty.ods  empty.xls  empty.xlsx  empty_header.csv  empty_header.ods  empty_header.xls  empty_header.xlsx  multisheet.ods  multisheet.xls  multisheet.xlsx  simple.csv  simple.ods  simple.xls  simple.xlsx  simple_header.csv  simple_header.ods  simple_header.xls  simple_header.xlsx  simple_header_pipe.csv
